objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>ClickDeploy</fullName>
        <description>ClickDeploy sales process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Formal Proposal</fullName>
        </values>
        <values>
            <fullName>Fully Paid</fullName>
        </values>
        <values>
            <fullName>Marketing Qualification</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Partially Paid</fullName>
        </values>
        <values>
            <fullName>Signed Contract Received</fullName>
        </values>
        <values>
            <fullName>Solution Alignment</fullName>
        </values>
        <values>
            <fullName>Solution Validation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Credits Assignment</fullName>
        <description>Only for credit assignments and automated payments</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Default</fullName>
        <description>Default Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Formal Proposal</fullName>
        </values>
        <values>
            <fullName>Fully Paid</fullName>
        </values>
        <values>
            <fullName>Marketing Qualification</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Partially Paid</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Signed Contract Received</fullName>
        </values>
        <values>
            <fullName>Solution Alignment</fullName>
        </values>
        <values>
            <fullName>Solution Validation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Existing</fullName>
        <description>Existing customers/Renewal</description>
        <isActive>true</isActive>
        <values>
            <fullName>Best Case</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Formal Proposal</fullName>
        </values>
        <values>
            <fullName>Fully Paid</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Signed Contract Received</fullName>
        </values>
        <values>
            <fullName>Solution Alignment</fullName>
        </values>
        <values>
            <fullName>Solution Validation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Context</fullName>
        <description>This Sales Process is Created For New Context</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Formal Proposal</fullName>
        </values>
        <values>
            <fullName>Marketing Qualification</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Scope Validation</fullName>
        </values>
        <values>
            <fullName>Signed Contract Received</fullName>
        </values>
        <values>
            <fullName>Work at Risk</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>kuga_sub__Expansion Sales Process</fullName>
        <description>Expansion Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Formal Proposal</fullName>
        </values>
        <values>
            <fullName>Fully Paid</fullName>
        </values>
        <values>
            <fullName>Marketing Qualification</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Partially Paid</fullName>
        </values>
        <values>
            <fullName>Signed Contract Received</fullName>
        </values>
        <values>
            <fullName>Solution Alignment</fullName>
        </values>
        <values>
            <fullName>Solution Validation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>kuga_sub__New Sales Process</fullName>
        <description>New Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Formal Proposal</fullName>
        </values>
        <values>
            <fullName>Fully Paid</fullName>
        </values>
        <values>
            <fullName>Marketing Qualification</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Partially Paid</fullName>
        </values>
        <values>
            <fullName>Signed Contract Received</fullName>
        </values>
        <values>
            <fullName>Solution Alignment</fullName>
        </values>
        <values>
            <fullName>Solution Validation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>kuga_sub__Renewal Sales Process</fullName>
        <description>Renewal Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Formal Proposal</fullName>
        </values>
        <values>
            <fullName>Fully Paid</fullName>
        </values>
        <values>
            <fullName>Marketing Qualification</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Partially Paid</fullName>
        </values>
        <values>
            <fullName>Signed Contract Received</fullName>
        </values>
        <values>
            <fullName>Solution Alignment</fullName>
        </values>
        <values>
            <fullName>Solution Validation</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACV__c</fullName>
        <label>ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR__c</fullName>
        <formula>MRR__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ARR is the MRR * 12</inlineHelpText>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Academy_Amount__c</fullName>
        <label>Academy Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Family__c</field>
            <operation>equals</operation>
            <value>Academy</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Add_on_ACV_Total__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.Add_On_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add on ACV Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Agreement__c.Type__c</field>
                <operation>equals</operation>
                <value>MSA</value>
            </filterItems>
            <filterItems>
                <field>Agreement__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>Please select the Opportunity Account or the Opportunity Parent Account&apos;s MSA Agreement.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alliances_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Partner Development Manager working with the Partner on this deal</inlineHelpText>
        <label>Alliances Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesAlliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign_Copado_AE__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick to assign opportunity to appropriate AE</inlineHelpText>
        <label>Assign Copado AE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatic_PB_Date__c</fullName>
        <label>Automatic PB Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BDR_Manager_Qualified_Date__c</fullName>
        <inlineHelpText>The date that BDR Manager qualified the Opportunity</inlineHelpText>
        <label>BDR Manager Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDR_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BDR Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BDR_Qualification_Notes__c</fullName>
        <label>BDR Qualification Notes</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Backend__c</fullName>
        <label>Backend</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Backend</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Relationship_Score__c</fullName>
        <label>Best Relationship Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Best Relationship</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <formula>HYPERLINK(&quot;https://copado.lightning.force.com/lightning/r/Contact/&quot; &amp; Account.Billing_Contact__c , Account.Billing_Contact__r.FirstName  &amp; &quot; &quot;  &amp; Account.Billing_Contact__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Amount_Due__c</fullName>
        <label>Total Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Amount_Invoiced__c</fullName>
        <label>Total Amount Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Amount_Overdue__c</fullName>
        <label>Total Amount Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Amount_Paid__c</fullName>
        <label>Total Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Draft_Amount__c</fullName>
        <label>Total Draft Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <inlineHelpText>Budget Amount/Allocated Budget</inlineHelpText>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Available_Date__c</fullName>
        <label>Budget Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Drivers__c</fullName>
        <inlineHelpText>Why would this prospect buy Copado?</inlineHelpText>
        <label>Business Drivers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLA_Sent_Under_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Copado License Agreement has been sent and is under review.</inlineHelpText>
        <label>CLA Sent/Under Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COVID_19_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COVID-19 Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRT_AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Copado Robotic Testing (CRT) AE for this Opportunity.</inlineHelpText>
        <label>CRT AE</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRT_Sales_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRT Sales Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To show the Campaign Name on Opportunity.</description>
        <inlineHelpText>Related Campaign Name</inlineHelpText>
        <label>Campaign Name</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capture_Opp_Closed_Won_Date__c</fullName>
        <label>Capture Opp Closed Won Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who will sell on your behalf inside the company?</description>
        <inlineHelpText>Who will sell on your behalf inside the company?</inlineHelpText>
        <label>Champion</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Champion)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Enterprise_Trial_Expiry_Date__c</fullName>
        <label>ClickDeploy Enterprise Trial Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Enterprise_Trial_Start_Date__c</fullName>
        <label>ClickDeploy Enterprise Trial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Enterprise_Trial_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClickDeploy Enterprise Trial Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Salesforce_Org_Id__c</fullName>
        <label>ClickDeploy Salesforce Org Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Team_Subscription_ID__c</fullName>
        <label>ClickDeploy Team Subscription ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Total_Deploy_This_Month__c</fullName>
        <label>ClickDeploy Total Deploy This Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Total_Success_Deploy_Attempt__c</fullName>
        <label>ClickDeploy Total Success Deploy Attempt</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_User_Id__c</fullName>
        <externalId>true</externalId>
        <label>ClickDeploy User Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Reason__c</fullName>
        <description>This Field is created as Qentinel data Migration</description>
        <label>Closed Won Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Paid__c</fullName>
        <label>Commission Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-2,500</fullName>
                </value>
                <value>
                    <fullName>2,501-5,000</fullName>
                </value>
                <value>
                    <fullName>5,001-7,500</fullName>
                </value>
                <value>
                    <fullName>7,501-10,000</fullName>
                </value>
                <value>
                    <fullName>10,001+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Status__c</fullName>
        <description>This is the competitive status in this opportunity. Select Ahead if we are ahead of the competition. Select Behind if we are behind the competition. Select Even if we are even with the competition</description>
        <inlineHelpText>This is the competitive status in this opportunity. Select Ahead if we are ahead of the competition. Select Behind if we are behind the competition. Select Even if we are even with the competition</inlineHelpText>
        <label>Competitive Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ahead</fullName>
                </value>
                <value>
                    <fullName>Even</fullName>
                </value>
                <value>
                    <fullName>Behind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractTerm__c</fullName>
        <label>Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copado_AE_to_Assign__c</fullName>
        <inlineHelpText>This is the identified Copado AE based on territory assignments</inlineHelpText>
        <label>Copado AE to Assign</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copado_Robotic_Testing_ACV__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.Copado_Robotic_Testing_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copado Robotic Testing ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <label>Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_ARR__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.Current_ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Action__c</fullName>
        <inlineHelpText>Please enter what you are currently doing for this opportunity. Then enter next steps.</inlineHelpText>
        <label>Current Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Align Customer Stakeholders</fullName>
                </value>
                <value>
                    <fullName>Backchannel to customer</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>MSA - Copado</fullName>
                </value>
                <value>
                    <fullName>MSA - Customer</fullName>
                </value>
                <value>
                    <fullName>MSA - Joint Review</fullName>
                </value>
                <value>
                    <fullName>NDA - Copado</fullName>
                </value>
                <value>
                    <fullName>NDA - Create NDA</fullName>
                </value>
                <value>
                    <fullName>NDA - Customer</fullName>
                </value>
                <value>
                    <fullName>NDA - Deliver NDA</fullName>
                </value>
                <value>
                    <fullName>NDA - Fully Executed</fullName>
                </value>
                <value>
                    <fullName>NDA - Joint Review</fullName>
                </value>
                <value>
                    <fullName>NDA - Review NDA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Schedule Call</fullName>
                </value>
                <value>
                    <fullName>Send Email</fullName>
                </value>
                <value>
                    <fullName>SOW - Arrange Scoping Meeting</fullName>
                </value>
                <value>
                    <fullName>SOW - Copado Legal Review</fullName>
                </value>
                <value>
                    <fullName>SOW - Create Proposal</fullName>
                </value>
                <value>
                    <fullName>SOW - Creation</fullName>
                </value>
                <value>
                    <fullName>SOW - Customer Review</fullName>
                </value>
                <value>
                    <fullName>SOW - Deal Qualification</fullName>
                </value>
                <value>
                    <fullName>SOW - Pre-delivery Negotiation</fullName>
                </value>
                <value>
                    <fullName>SOW - Scoping</fullName>
                </value>
                <value>
                    <fullName>SOW - Strategic Services Review</fullName>
                </value>
                <value>
                    <fullName>Vendor Approval</fullName>
                </value>
                <value>
                    <fullName>Waiting to hear from Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_MSA_in_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current MSA in Place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DL_VC__Has_Master_Value_Proposition__c</fullName>
        <formula>DL_VC__Master_Value_Proposition_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Master Value Proposition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DL_VC__Has_Value_Proposition_Group__c</fullName>
        <formula>DL_VC__Value_Proposition_Group_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Value Proposition Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DL_VC__Has_Value_Proposition__c</fullName>
        <formula>DL_VC__Value_Proposition_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Value Proposition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DL_VC__Master_Value_Proposition_Count__c</fullName>
        <label>Master Value Proposition Count</label>
        <summaryForeignKey>DL_VC__Master_Value_Proposition__c.DL_VC__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DL_VC__Value_Proposition_Count__c</fullName>
        <label>Value Proposition Count</label>
        <summaryForeignKey>DL_VC__VC_Value_Proposition__c.DL_VC__VC_Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DL_VC__Value_Proposition_Group_Count__c</fullName>
        <label>Value Proposition Group Count</label>
        <summaryForeignKey>DL_VC__VC_Value_Proposition_Group__c.DL_VC__VPG_Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Assignment_Group_Label__c</fullName>
        <description>Label of the group to which this opportunity was assigned by Decisions on Demand</description>
        <inlineHelpText>Group to which this opportunity was assigned by Decisions on Demand</inlineHelpText>
        <label>Assignment Group Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Assignment_Group__c</fullName>
        <description>Unique name or ID of the group to which this opportunity was assigned by Decisions on Demand</description>
        <inlineHelpText>Group to which this opportunity was assigned by Decisions on Demand</inlineHelpText>
        <label>Assignment Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Assignment_Status__c</fullName>
        <defaultValue>&quot;Unknown&quot;</defaultValue>
        <description>Status of the most recent assignment by Decisions on Demand</description>
        <inlineHelpText>Status of the most recent assignment by Decisions on Demand</inlineHelpText>
        <label>Assignment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DecsOnD__Assignment_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DecsOnD__DupeMatch_Tag__c</fullName>
        <description>Tag used by Decisions on Demand to determine whether an opportunity is in- or excluded from Duplicate Matching. Designed to be set by Apex code</description>
        <inlineHelpText>For Decisions on Demand internal use</inlineHelpText>
        <label>Duplicate Match Tag (DecsOnD)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Team_Size__c</fullName>
        <label>Delivery Team Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo_Reporting__c</fullName>
        <formula>IF( Demo__c = TRUE, &quot;Yes&quot; , &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demo (Reporting)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_To_Close_Duration__c</fullName>
        <formula>CloseDate -  First_Demo_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demo To Close Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo__c</fullName>
        <formula>NOT(ISBLANK( First_Demo_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_pulled_over_from_lead__c</fullName>
        <inlineHelpText>don&apos;t use on page layouts</inlineHelpText>
        <label>Description (pulled over from lead)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DevOps360_Analytics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DevOps360 Analytics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Refers to the duplicate opportunity when an opportunity is closed duplicate.</inlineHelpText>
        <label>Duplicate Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>